[project]
name = "deploy-and-manage-adk-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "floggit>=0.0.19",
    "google-adk==1.3.0",
    "google-cloud-storage>=2.19.0",
    "locust==2.37.10",
    "networkx>=3.5",
    "pg8000==1.31.2",
    "pydantic>=2.11.7",
    "python-dotenv==1.1.0",
    "thefuzz==0.22.1",
    "python-Levenshtein==0.25.1",
]

[dependency-groups]
dev = [
    "pytest==8.4.0",
    "ruff==0.11.13",
]
